# air-quality-pipeline

./: README.md  main.py  pyproject.toml
schemas/: bronze_schemas.py  silver_schemas.py
src/: ingest.py  transform_silver.py
